Change Disclosure Examples to Use DL Semantics restore use of DL/DT/DD and use button element  (#282)
* updated example to use images instead of entities for visual state information and removed the use of DL/DT/DD elements in FAQ example

* Updated disclosure example, restored DL, DT and DD and used the button element instead of span elements with role=button

* Revisions to disclosure FAQ Example

modified:   examples/disclosure/disclosure-faq.html:
* Moved answers inside of a `p` element inside of the `dd` element.
* Fixed call to method for displaying html source.
* Editorial revisions.

* Editorial Corrections to Disclosure Examples

modified examples/disclosure/disclosure-faq.html:
* Revised title and H1 to include the word "Example".

modified examples/disclosure/disclosure-img-long-description.html:
* Revised title and H1 to include the word "Example".
* Change heading inside of example to H3
* Fix typos
* Editorial revision to wording of accessibility features for clarity.

--- a/examples/disclosure/css/disclosure-faq.css
+++ b/examples/disclosure/css/disclosure-faq.css
@@ -1,34 +1,16 @@
-[role="button"]:hover,
-[role="button"]:focus {
-  background-color: #eee;
-  text-decoration: underline;
-}
-
-[role="button"]:active {
-  background-color: #bbb;
-}
-
-[role="button"][aria-expanded="false"]:before {
-  content: "\0025BA \0000A0";
-  color: #630;
-
-}
-
-[role="button"][aria-expanded="true"]:before {
-  content: "\0025BC \0000A0";
-  color: #630;
-}
-
-dl.faq dt {
+dl.faq button {
     margin: 0;
     padding: 0;
-    margin-top: 0.5em;
+    margin-top: 1em;
     font-weight: bold;
     font-size: 110%;
+    border: thin solid transparent;
+    background-color: transparent;
+    padding-left: 0.125em;
 }
 
 
-dl.faq dd {
+dl.faq .desc {
     margin: 0;
     padding: 0;
     margin-top: 0.25em;
@@ -36,3 +18,32 @@ dl.faq dd {
     font-size: 110%;
     display: none;
 }
+
+dl.faq button:hover,
+dl.faq button:focus {
+  background-color: #eee;
+}
+
+dl.faq button:focus {
+  border-color: #663300;
+}
+
+dl.faq button:hover {
+  text-decoration: underline;
+}
+
+dl.faq button:active {
+  background-color: #bbb;
+}
+
+dl.faq button[aria-expanded="false"]:before {
+  content: url('../images/right-arrow-brown.png');
+  padding-right: 0.35em;
+
+}
+
+dl.faq button[aria-expanded="true"]:before {
+  content: url('../images/down-arrow-brown.png');
+  padding-right: 0.35em;
+}
+
