--- a/examples/css/core.css
+++ b/examples/css/core.css
@@ -1,83 +1,16 @@
-html,
-body {
-  font: normal 95% Helvetica, Verdana, Arial, sans-serif;
-  color: #000;
-  padding: 0;
-  margin: 0;
-}
+/* Style for syntax highlighting */
+@import url("github.css");
 
-body {
-  padding: 0.5em 0.7em;
-  margin: 0 4em 0 1em;
-  max-width: 55em;
-  background: #fff;
-}
-
-h1,
-h2,
-h3 {
-  font: normal 170%/100% Helvetica, Verdana, Arial, sans-serif;
-  margin-top: 1em;
-  margin-bottom: 0;
-  color: #630;
-  background: transparent;
-}
-
-h1 {
-  padding: 0.2em;
-}
-
-h2 {
-  font: normal 150%/100% Helvetica, Verdana, Arial, sans-serif;
-  margin-top: 2em;
-}
-
-h3 {
-  font: normal 140%/120% Helvetica, Verdana, Arial, sans-serif;
-}
-
-a {
-  color: #009;
-  background: transparent;
-}
-
-a:visited {
-  color:#360;
-  background:transparent;
-}
-
-a:hover,
-a:focus,
-a:active {
-  color:#000;
-  background-color: #fc0;
-}
-
-img {
-  max-width: 100%;
-  border: none;
-}
-
+/* Code blocks */
 pre,
 code,
 samp,
 .sourcecode {
   color: hsl(11, 81%, 43%);
-  font-family: "Menlo", "Consolas", "DejaVu Sans Mono", "Monaco", monospace;
-  font-size: .9em;
-  page-break-inside: avoid;
-  hyphens: none;
-  text-transform: none;
-  white-space: pre-line;
 }
 
-pre code,
-code code {
-  font-size: 100%;
-}
-
-pre,
-.sourcecode {
+pre code:not(.hljs),
+.sourcecode:not(.hljs) {
   margin: 1em 0;
   padding: 1em;
   border-radius: .2em;
@@ -85,15 +18,59 @@ pre,
   background: hsl(24, 20%, 95%);
 }
 
-[hidden] {
-  display: none;
+/* Style all kbd elements that are not in table headers */
+:not(th) > kbd {
+  display: inline-block;
+  padding: .1em .3em;
+  color: #555;
+  vertical-align: middle;
+  background-color: #fcfcfc;
+  border: solid 1px #ccc;
+  border-bottom-color: #bbb;
+  border-radius: .2em;
+  box-shadow: inset 0 -1px 0 #bbb
 }
 
-#example {
-  margin-top: 1em;
-  margin-bottom: 2em;
+/* Align border for */
+table.data tbody th:first-child {
+  border-right: 0;
 }
 
-#example li + li {
-  margin-top: .5em;
+table.attributes tbody th:first-child + td,
+table.attributes tbody th:nth-child(2) {
+  border-right: 2px solid;
+  border-top: 1px solid silver;
+  padding-right: 1em;
+}
+
+/* Breadcrumb styles */
+nav.breadcrumb {
+  padding: 0.8em 1em;
+  border: 1px solid hsl(0, 0%, 90%);
+  border-radius: 4px;
+  background: hsl(300, 14%, 97%);
+}
+
+nav.breadcrumb ol {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+}
+
+nav.breadcrumb li {
+  display: inline;
+}
+
+nav.breadcrumb li + li::before {
+  display: inline-block;
+  margin: 0 .25em;
+  transform: rotate(15deg);
+  border-right: .1em solid currentColor;
+  height: .8em;
+  content: '';
+}
+
+nav.breadcrumb [aria-current="page"] {
+  color: #000;
+  font-weight: 700;
 }
