--- a/examples/css/core.css
+++ b/examples/css/core.css
@@ -32,7 +32,7 @@ pre code:not(.hljs),
 }
 
 /* Align border for */
-table.data tbody th:first-child {
+table.attributes tbody th:first-child {
   border-right: 0;
 }
 
@@ -41,36 +41,4 @@ table.attributes tbody th:nth-child(2) {
   border-right: 2px solid;
   border-top: 1px solid silver;
   padding-right: 1em;
-}
-
-/* Breadcrumb styles */
-nav.breadcrumb {
-  padding: 0.8em 1em;
-  border: 1px solid hsl(0, 0%, 90%);
-  border-radius: 4px;
-  background: hsl(300, 14%, 97%);
-}
-
-nav.breadcrumb ol {
-  margin: 0;
-  padding-left: 0;
-  list-style: none;
-}
-
-nav.breadcrumb li {
-  display: inline;
-}
-
-nav.breadcrumb li + li::before {
-  display: inline-block;
-  margin: 0 .25em;
-  transform: rotate(15deg);
-  border-right: .1em solid currentColor;
-  height: .8em;
-  content: '';
-}
-
-nav.breadcrumb [aria-current="page"] {
-  color: #000;
-  font-weight: 700;
 }
