--- a/examples/slider/css/slider.css
+++ b/examples/slider/css/slider.css
@@ -13,6 +13,7 @@ div.aria-widget-slider .rail {
   border: 1px solid #888;
   position: relative;
   top: 2em;
+  height: 4px;
 }
 
 div.aria-widget-slider .thumb  {
@@ -22,6 +23,13 @@ div.aria-widget-slider .thumb  {
   background-color: #DDD;
   position: relative;
 }
+
+div.aria-widget-slider .thumb.focus, 
+div.aria-widget-slider .thumb:hover {
+  outline: 2px solid #000;
+  background-color: #AAA;
+}
+
 
 div.aria-widget-slider .value  {
   width:      2em;
@@ -38,7 +46,6 @@ div.focus .thumb  {
 div.focus .rail {
   background-color: #CCC;
 }
-
 
 
 label {
