--- a/examples/slider/css/slider.css
+++ b/examples/slider/css/slider.css
@@ -26,8 +26,8 @@ div.aria-widget-slider .thumb  {
 
 div.aria-widget-slider .thumb.focus, 
 div.aria-widget-slider .thumb:hover {
-  outline: 2px solid #000;
-  background-color: #AAA;
+  outline: 2px solid #888;
+  background-color: #DEF;
 }
 
 
