--- a/examples/feed/css/feedDisplay.css
+++ b/examples/feed/css/feedDisplay.css
@@ -1,3 +1,15 @@
+#sidepanel {
+  display: inline-block;
+  vertical-align: top;
+  width: 29%;
+}
+
+#main-content {
+  display: inline-block;
+  vertical-align: top;
+  width: 70%;
+}
+
 #restaurant-feed {
   margin-top: 30px;
   width: 500px;
