--- a/examples/slider/css/text-slider.css
+++ b/examples/slider/css/text-slider.css
@@ -13,6 +13,7 @@ div.aria-widget-text-slider .rail {
   border: 1px solid #888;
   position: relative;
   top: 2em;
+  height: 4px;
 }
 
 div.aria-widget-text-slider .thumb  {
@@ -23,19 +24,25 @@ div.aria-widget-text-slider .thumb  {
   position: relative;
 }
 
+div.aria-widget-text-slider .thumb.focus, 
+div.aria-widget-text-slider .thumb:hover {
+  outline: 2px solid #888;
+  background-color: #E0CB52;
+}
+
 div.aria-widget-text-slider div.value  {
   text-align: center;
   display: block;
   position: absolute;
 }
 
-div.focus .thumb  {
+div.aria-widget-text-slider div.focus .thumb  {
   border: 1px solid #444;
   background-color: #888;
   position: relative;
 }
 
-div.focus .rail {
+div.aria-widget-text-slider div.focus .rail {
   background-color: #CCC;
 }
 
