--- a/examples/slider/css/slider.css
+++ b/examples/slider/css/slider.css
@@ -54,4 +54,14 @@ label {
   margin-bottom: 0.5em;
 }
 
+#idColorBox {
+	width: 200px;
+	height: 200px;
+	border: black solid medium;
+	text-align: center;
+	padding: 0.25em;
+}
 
+#idColorInfo {
+	padding-top: 5px;
+}
