--- a/examples/slider/css/text-slider.css
+++ b/examples/slider/css/text-slider.css
@@ -30,20 +30,14 @@ div.aria-widget-text-slider .thumb:hover {
   background-color: #E0CB52;
 }
 
+div.aria-widget-text-slider .rail.focus {
+  background-color: #BBB;  
+} 
+
 div.aria-widget-text-slider div.value  {
   text-align: center;
   display: block;
   position: absolute;
-}
-
-div.aria-widget-text-slider div.focus .thumb  {
-  border: 1px solid #444;
-  background-color: #888;
-  position: relative;
-}
-
-div.aria-widget-text-slider div.focus .rail {
-  background-color: #CCC;
 }
 
 
