--- a/examples/slider/css/vertical-slider.css
+++ b/examples/slider/css/vertical-slider.css
@@ -31,6 +31,10 @@ div.aria-widget-vertical-slider .thumb:hover {
   background-color: #E0CB52;
 }
 
+div.aria-widget-vertical-slider .rail.focus {
+  background-color: #BBB;
+}
+
 div.aria-widget-vertical-slider .label,
 div.aria-widget-vertical-slider .value  {
   margin-top: 0.5em;
@@ -39,18 +43,6 @@ div.aria-widget-vertical-slider .value  {
   width: 8em;
 }
 
-
-
-div.aria-widget-vertical-slider div.focus .thumb  {
-  border: 1px solid #444;
-  background-color: #888;
-  position: relative;
-}
-
-div.aria-widget-vertical-slider div.focus .rail {
-  background-color: #CCC;
-  width: 8px;
-}
 
 div.aria-widget-vertical-slider .label {
   font-weight: bold;
