--- a/examples/slider/css/slider.css
+++ b/examples/slider/css/slider.css
@@ -31,7 +31,7 @@ div.aria-widget-slider .thumb:hover {
 }
 
 div.aria-widget-slider .rail.focus {
-  background-color: #888;  
+  background-color: #BBB;  
 } 
 
 
