--- a/examples/css/core.css
+++ b/examples/css/core.css
@@ -42,7 +42,8 @@ table.attributes tbody th:first-child {
 
 table.attributes tbody th:first-child + td,
 table.attributes tbody th:nth-child(2) {
-  border-right: 2px solid;
+  border-right: 1px solid silver;
   border-top: 1px solid silver;
   padding-right: 1em;
 }
+
