--- a/examples/slider/css/text-slider.css
+++ b/examples/slider/css/text-slider.css
@@ -24,10 +24,14 @@ div.aria-widget-text-slider .thumb  {
   position: relative;
 }
 
-div.aria-widget-text-slider .thumb.focus, 
-div.aria-widget-text-slider .thumb:hover {
+div.aria-widget-text-slider .rail .thumb.focus, 
+div.aria-widget-text-slider .rail .thumb:hover {
   outline: 2px solid #888;
   background-color: #E0CB52;
+}
+
+div.aria-widget-text-slider .rail.focus {
+  background-color: #AAA;
 }
 
 div.aria-widget-text-slider div.value  {
