--- a/examples/slider/css/slider.css
+++ b/examples/slider/css/slider.css
@@ -24,29 +24,21 @@ div.aria-widget-slider .thumb  {
   position: relative;
 }
 
-div.aria-widget-slider .thumb.focus, 
-div.aria-widget-slider .thumb:hover {
+div.aria-widget-slider .rail .thumb.focus, 
+div.aria-widget-slider .rail .thumb:hover {
   outline: 2px solid #888;
   background-color: #DEF;
 }
 
+div.aria-widget-slider .rail.focus {
+  background-color: #AAA;
+}
 
 div.aria-widget-slider .value  {
   width:      2em;
   text-align: right;
   position: absolute;
 }
-
-div.focus .thumb  {
-  border: 1px solid #444;
-  background-color: #888;
-  position: relative;
-}
-
-div.focus .rail {
-  background-color: #CCC;
-}
-
 
 label {
   display: block;
