--- a/examples/menubar/menubar-2/css/menubarAction.css
+++ b/examples/menubar/menubar-2/css/menubarAction.css
@@ -1,6 +1,8 @@
 ul[role="menubar"] {
-  margin: 10px;
-  padding: 10px;
+  margin: 0;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  padding: 0.25em;
   font-size: 110%;
   list-style: none;
   background-color: #EEEEEE;
