Add HTML Display and change ID of div containing main content
modified examples/dialog-modal/css/dialog.css: changed selector main_content to base_window_layer
modified examples/dialog-modal/dialog.html:
1. Add comment about DOM position of dialog_layer div.
2. Add call to sourceCode.add for dialog_layer
3. Change ID of div containing main content to base_window_layer.

--- a/examples/dialog-modal/css/dialog.css
+++ b/examples/dialog-modal/css/dialog.css
@@ -9,7 +9,7 @@ body:not(.toc-inline) {
   padding: 0;
 }
 
-#main_content {
+#base_window_layer {
 	box-sizing: border-box;
 	height: 100vh;
 	width: 100%;
@@ -17,7 +17,7 @@ body:not(.toc-inline) {
 	padding: 1.6em 0 2em;
 }
 
-#main_content main, #main_content nav {
+#base_window_layer main, #base_window_layer nav {
 	max-width: 50em;
 	margin: auto;
 	padding-right: 1.5em;
@@ -26,7 +26,7 @@ body:not(.toc-inline) {
 }
 
 @media screen and (min-width: 78em) {
-	body:not(.toc-inline) #main_content main, body:not(.toc-inline) #main_content nav  {
+	body:not(.toc-inline) #base_window_layer main, body:not(.toc-inline) #base_window_layer nav  {
 	    padding-left: 29em;
 	}
 
