--- a/examples/grid/css/layoutGrids.css
+++ b/examples/grid/css/layoutGrids.css
@@ -3,13 +3,19 @@
 }
 
 #arrow-keys-indicator {
-	bottom: 0;
+	bottom: 10px;
 	left: 0;
 	position: fixed;
 	height: 75px;
 	width: 100px;
 	background: url('../imgs/black_keys.png') no-repeat;
 	background-size: contain;
+}
+
+@media screen and (min-width: 1000px) {
+	#arrow-keys-indicator {
+		display: none;
+	}
 }
 
 .accessible_elem {
@@ -44,20 +50,10 @@
 	position: relative;
 }
 
-[role="gridcell"]:focus::before, [role="gridcell"] *:focus::before {
-	content: ' ';
-	background: url('../imgs/keys.png');
-	background-color: white;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: 12px;
-	width: 12px;
-	height: 12px;
-	display: block;
-	position: absolute;
-	top: 0px;
-	left: -15px;
-	z-index: 1;
+[role="gridcell"]:focus, [role="gridcell"] *:focus {
+	outline: #005a9c;
+	outline-style: dotted;
+	outline-width: 3px;
 }
 
 .grid-nux {
