--- a/examples/css/core.css
+++ b/examples/css/core.css
@@ -35,18 +35,7 @@ pre code:not(.hljs),
   box-shadow: inset 0 -1px 0 #bbb
 }
 
-
-table.attributes tbody th,
-table.attributes tbody td {
-  border-right: 1px solid silver;
-  border-top: 1px solid silver;
-  padding-right: 1em;
+table.data.attributes tbody th,
+table.data.attributes tbody td {
+    border: 1px solid silver;
 }
-
-table.data  tbody th:first-child,
-	table.index tbody th:first-child  {
-		border-right: 1px solid silver;
-		border-top: 1px solid silver;
-		padding-right: 1em;
-	}
-
