--- a/examples/dialog-modal/css/dialog.css
+++ b/examples/dialog-modal/css/dialog.css
@@ -45,7 +45,7 @@ body:not(.toc-inline) #main_content main, body:not(.toc-inline) #main_content na
 }
 
 #dialog_layer.showing {
-	position: fixed;
+	position: absolute;
 	width: 100%;
 	height: 100%;
 	top: 0;
@@ -66,6 +66,15 @@ div.default_dialog {
 	position: absolute;;
 	top: 25%;
 	left: 25%;
+}
+
+@media screen and (max-width: 640px) {
+	div.default_dialog {
+		box-sizing: border-box;
+		top: 1%;
+		left: 2%;
+		width: 96%;
+	}
 }
 
 .default_dialog h2:first-of-type {
