--- a/examples/dialog-modal/css/dialog.css
+++ b/examples/dialog-modal/css/dialog.css
@@ -13,7 +13,8 @@ body:not(.toc-inline) {
 	box-sizing: border-box;
 	height: 100vh;
 	width: 100%;
-	overflow: auto;
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
 	padding: 1.6em 0 2em;
 }
 
@@ -47,10 +48,11 @@ body:not(.toc-inline) #main_content main, body:not(.toc-inline) #main_content na
 #dialog_layer.showing {
 	position: absolute;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	top: 0;
 	left: 0;
-	overflow: auto;
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
 	background: rgba(0, 0, 0, 0.3);
 }
 
