--- a/examples/dialog-modal/css/dialog.css
+++ b/examples/dialog-modal/css/dialog.css
@@ -11,7 +11,7 @@ body:not(.toc-inline) {
 
 #base_window_layer {
 	box-sizing: border-box;
-	height: 100vh;
+	height: 100%;
 	width: 100%;
 	overflow-y: scroll;
 	-webkit-overflow-scrolling: touch;
@@ -48,7 +48,7 @@ body:not(.toc-inline) #main_content main, body:not(.toc-inline) #main_content na
 #dialog_layer.showing {
 	position: absolute;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	top: 0;
 	left: 0;
 	overflow-y: scroll;
