--- a/examples/dialog-modal/css/dialog.css
+++ b/examples/dialog-modal/css/dialog.css
@@ -14,6 +14,7 @@ body:not(.toc-inline) {
 }
 
 #base_window_layer {
+	background-color: blue;
 	box-sizing: border-box;
 	height: 100%;
 	width: 100%;
