--- a/examples/dialog-modal/css/dialog.css
+++ b/examples/dialog-modal/css/dialog.css
@@ -1,7 +1,3 @@
-html, body {
-	height: 100%;
-}
-
 body {
 	max-width: 100%;
 	padding: 0;
@@ -17,7 +13,7 @@ body:not(.toc-inline) {
 	box-sizing: border-box;
 	height: 100%;
 	width: 100%;
-	/* Use overflow scroll + webkit overflow scrolling for iOS momentum scroll */
+	/* Use overflow scroll and webkit-overflow-scrolling to add momentum scroll*/
 	overflow-y: scroll;
 	-webkit-overflow-scrolling: touch;
 	padding: 1.6em 0 2em;
@@ -56,7 +52,6 @@ body:not(.toc-inline) #main_content main, body:not(.toc-inline) #main_content na
 	height: 100%;
 	top: 0;
 	left: 0;
-	/* Use overflow scroll + webkit overflow scrolling for iOS momentum scroll */
 	overflow-y: scroll;
 	-webkit-overflow-scrolling: touch;
 	background: rgba(0, 0, 0, 0.3);
