testing scroll=fix

--- a/examples/dialog-modal/css/dialog.css
+++ b/examples/dialog-modal/css/dialog.css
@@ -80,6 +80,7 @@ div.default_dialog {
 		box-sizing: border-box;
 		top: 0px;
 		left: 0px;
+		margin-bottom: 0px;
 		min-height: 100%;
 		width: 100%;
 	}
