--- a/examples/dialog-modal/css/dialog.css
+++ b/examples/dialog-modal/css/dialog.css
@@ -18,7 +18,7 @@ body:not(.toc-inline) {
 	height: 100%;
 	width: 100%;
 	/* Use overflow scroll and webkit-overflow-scrolling to add momentum scroll*/
-	overflow-y: scroll;
+	overflow: scroll;
 	-webkit-overflow-scrolling: touch;
 	padding: 1.6em 0 2em;
 }
@@ -51,12 +51,12 @@ body:not(.toc-inline) #main_content main, body:not(.toc-inline) #main_content na
 }
 
 #dialog_layer.showing {
-	position: fixed;
+	position: absolute;
 	width: 100%;
 	height: 100%;
 	top: 0;
 	left: 0;
-	overflow-y: scroll;
+	overflow: scroll;
 	-webkit-overflow-scrolling: touch;
 	background: rgba(0, 0, 0, 0.3);
 }
