--- a/examples/treeview/treeview-2/css/treeLinks.css
+++ b/examples/treeview/treeview-2/css/treeLinks.css
@@ -23,27 +23,37 @@ ul[role="tree"] a {
   display: block;
 }
 
-[role="treeitem"][aria-expanded="false"] > span:before {
-  content: "\00229E \0000A0";
+[role="treeitem"][aria-expanded="false"] > span > span.state {
   color: #630;
   font-weight: bold;
   font-size: 1em;
+  position: relative;
+  top: -0.1em;
 }
 
-[role="treeitem"][aria-expanded="true"] > span:before {
+[role="treeitem"][aria-expanded="false"] > span > span.state:before {
+  content: "\00229E \0000A0";
+}
+
+[role="treeitem"][aria-expanded="true"] > span > span.state:before {
   content: "\00229F \0000A0";
-  color: #630;
-  font-weight: bold;
-  font-size: 1.1em;
 }
 
 [role="treeitem"],
-[role="treeitem"] span {
+[role="treeitem"] > span {
   margin: 0;
   padding: 0;
   border: 2px transparent solid;
   padding: 0.125em;
   display: block;
+}
+
+/* 
+   Remove default keyboard focus of browser for treeitems, 
+   since example actively styles treeitem focus 
+*/
+[role="treeitem"]:focus {
+  outline: 0;
 }
 
 [role="treeitem"].focus,
