--- a/examples/slider/css/multithumb-slider.css
+++ b/examples/slider/css/multithumb-slider.css
@@ -45,7 +45,7 @@ div.aria-widget-slider img[role="slider"]:hover {
 }
 
 div.aria-widget-slider .rail.focus {
-  background-color: #AAA;
+  background-color: #aaa;
 }
 
 
