Fixed some markup issues and added click events

--- a/examples/combobox/aria1.1pattern/css/combobox-1.1.css
+++ b/examples/combobox/aria1.1pattern/css/combobox-1.1.css
@@ -23,7 +23,12 @@
 }
 
 .listbox .result {
+	cursor: default;
 	margin: 0;
+}
+
+.listbox .result:hover {
+	background: rgb(139, 189, 225);
 }
 
 .listbox .focused {
