--- a/examples/listbox/css/listbox.css
+++ b/examples/listbox/css/listbox.css
@@ -54,44 +54,61 @@
 	left: 0.5em;
 }
 
+button {
+	font-size: 16px;
+}
+
 button[aria-disabled="true"] {
 	opacity: 0.5;
 }
 
 .move-right-btn {
-	padding-right: 15px;
+	padding-right: 20px;
 	position: relative;
 }
 
 .move-right-btn::after {
 	content: ' ';
 	height: 10px;
-	width: 10px;
+	width: 12px;
 	background-image: url('../imgs/Arrows-Right-icon.png');
 	background-position: center right;
 	position: absolute;
 	right: 2px;
-	top: 4px;
+	top: 6px;
 }
 
 .move-left-btn {
-	padding-left: 15px;
+	padding-left: 20px;
 	position: relative;
 }
 
 .move-left-btn::after {
 	content: ' ';
 	height: 10px;
-	width: 10px;
+	width: 12px;
 	background-image: url('../imgs/Arrows-Left-icon.png');
 	background-position: center left;
 	position: absolute;
 	left: 2px;
-	top: 4px;
+	top: 6px;
 }
 
 #ss_elem_list {
 	max-height: 18em;
 	overflow-y: auto;
 	position: relative;
+}
+
+.toolbar {
+	font-size: 0;
+}
+
+.toolbar-item {
+	border: 1px solid #aaa;
+	background: #ccc;
+}
+
+.toolbar-item[aria-disabled="false"]:focus {
+	background-color: #eee;
 }
