--- a/examples/listbox/css/listbox.css
+++ b/examples/listbox/css/listbox.css
@@ -102,6 +102,32 @@ button[aria-disabled="true"] {
   text-align: left;
   padding: 5px 10px;
 	width: 150px;
+	position: relative;
+}
+
+#exp_button::after {
+	width: 0;
+  height: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-top: 8px solid #aaa;
+  content: " ";
+  position: absolute;
+  right: 5px;
+  top: 10px;
+}
+
+#exp_button[aria-expanded="true"]::after {
+	width: 0;
+  height: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+	border-top: 0;
+  border-bottom: 8px solid #aaa;
+  content: " ";
+  position: absolute;
+  right: 5px;
+  top: 10px;
 }
 
 #exp_elem_list {
