--- a/examples/listbox/css/listbox.css
+++ b/examples/listbox/css/listbox.css
@@ -112,3 +112,14 @@ button[aria-disabled="true"] {
 .toolbar-item[aria-disabled="false"]:focus {
 	background-color: #eee;
 }
+
+.offscreen {
+	clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+	font-size: 14px;
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
