--- a/examples/combobox/aria1.0pattern/css/combobox-1.0.css
+++ b/examples/combobox/aria1.0pattern/css/combobox-1.0.css
@@ -3,20 +3,28 @@
 	color: #366ED4;
 }
 
-.combobox {
+.combobox10 {
   position: relative;
 }
 
-.combobox label {
+.combobox10 label {
   margin: 0;
   padding: 0;
   display: block;
 }
 
-.combobox group input,
-.combobox group button {
+.combobox10 .group input,
+.combobox10 .group button {
   display: inline;
 }
 
-
+.combobox10 .group button {
+  margin: 0;
+  padding: 0 0.125em 0 0.125em;
+  position: relative;
+  top: 1px;
+  left: -2px;
+  font-size: 85%;
+  background-color: #eee;
+}
 
