--- a/examples/combobox/aria1.0pattern/css/combobox-1.0.css
+++ b/examples/combobox/aria1.0pattern/css/combobox-1.0.css
@@ -8,18 +8,18 @@
 }
 
 .combobox-inline label,
-.combobox-listbox label {
+.combobox-list label {
   margin: 0;
   padding: 0;
   display: block;
 }
 
-.combobox-listbox .group input,
-.combobox-listbox .group button {
+.combobox-list .group input,
+.combobox-list .group button {
   display: inline;
 }
 
-.combobox-listbox .group button {
+.combobox-list .group button {
   margin: 0;
   padding: 0 0.125em 0 0.125em;
   position: relative;
