--- a/examples/checkbox/css/checkbox.css
+++ b/examples/checkbox/css/checkbox.css
@@ -41,8 +41,10 @@ ul.checkboxes {
 
 [role="checkbox"][aria-checked="mixed"]::after {
   display: block;
-  width: 6px;
+  width: 8px;
   border-bottom: 0.125em solid #fff;
+  transform: translate(-50%, -50%) rotateZ(45deg);
+  transform-origin: center center;
 }
 
 [role="checkbox"][aria-checked="mixed"]:active::after,
