--- a/examples/combobox/aria1.0pattern/css/combobox-1.0.css
+++ b/examples/combobox/aria1.0pattern/css/combobox-1.0.css
@@ -2,3 +2,30 @@
 	font-style: italic;
 	color: #366ED4;
 }
+
+.combobox-list {
+  position: relative;
+}
+
+.combobox-inline label,
+.combobox-list label {
+  margin: 0;
+  padding: 0;
+  display: block;
+}
+
+.combobox-list .group input,
+.combobox-list .group button {
+  display: inline;
+}
+
+.combobox-list .group button {
+  margin: 0;
+  padding: 0 0.125em 0 0.125em;
+  position: relative;
+  top: 1px;
+  left: -2px;
+  font-size: 85%;
+  background-color: #eee;
+}
+
